// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfoboxQuest should render a complete quest infobox 1`] = `
InfoboxTemplate {
  "name": "Infobox Quest",
  "params": Object {
    "difficulty": "Master",
    "image": "[[File:The Curse of Arrav.png|300px]]",
    "length": "Medium",
    "location": "Uzer Oasis",
    "members": "Yes",
    "name": "The Curse of Arrav",
    "number": 170,
    "qp": 2,
    "release": "[[5 November]] [[2024]]",
    "series": "Mahjarrat, #10",
    "type": "Quests",
    "update": undefined,
  },
}
`;

exports[`InfoboxQuest should render infobox for F2P quest 1`] = `
InfoboxTemplate {
  "name": "Infobox Quest",
  "params": Object {
    "difficulty": "Master",
    "image": "[[File:The Curse of Arrav.png|300px]]",
    "length": "Medium",
    "location": "Uzer Oasis",
    "members": "No",
    "name": "The Curse of Arrav",
    "number": 170,
    "qp": 2,
    "release": "[[5 November]] [[2024]]",
    "series": "Mahjarrat, #10",
    "type": "Quests",
    "update": undefined,
  },
}
`;

exports[`InfoboxQuest should render infobox without series 1`] = `
InfoboxTemplate {
  "name": "Infobox Quest",
  "params": Object {
    "difficulty": "Master",
    "image": "[[File:The Curse of Arrav.png|300px]]",
    "length": "Medium",
    "location": "Uzer Oasis",
    "members": "Yes",
    "name": "The Curse of Arrav",
    "number": 170,
    "qp": 2,
    "release": "[[5 November]] [[2024]]",
    "series": undefined,
    "type": "Quests",
    "update": undefined,
  },
}
`;

exports[`InfoboxQuest should render miniquest infobox 1`] = `
InfoboxTemplate {
  "name": "Infobox Quest",
  "params": Object {
    "difficulty": "Master",
    "image": "[[File:The Curse of Arrav.png|300px]]",
    "length": "Medium",
    "location": "Uzer Oasis",
    "members": "Yes",
    "name": "The Curse of Arrav",
    "number": 170,
    "qp": undefined,
    "release": "[[5 November]] [[2024]]",
    "series": "Mahjarrat, #10",
    "type": "Miniquests",
    "update": undefined,
  },
}
`;
